# CuteLogger

./: CMakeLists.txt
src/: AbstractStringAppender.cpp  Logger.cpp
